[gd_scene load_steps=12 format=3 uid="uid://cexyth8mmkpa5"]

[ext_resource type="Theme" uid="uid://fkat5bpgiklk" path="res://ScreenMainTheme.tres" id="1_qqu8f"]
[ext_resource type="Theme" uid="uid://bqodo202t6svm" path="res://UI/button_theme.tres" id="1_upek8"]
[ext_resource type="ButtonGroup" uid="uid://bamt45mhkoyvk" path="res://UI/car_buttons.tres" id="1_wutij"]
[ext_resource type="Texture2D" uid="uid://crf26xahoogfh" path="res://Assets/Images/greenTriangle.png" id="2_1wcrq"]
[ext_resource type="Script" uid="uid://cmn3yomsk53u2" path="res://Scripts/customization_screen.gd" id="2_qqu8f"]
[ext_resource type="Texture2D" uid="uid://ct5tj7qusd4kq" path="res://Assets/Images/greenCircle.png" id="3_ctcc5"]
[ext_resource type="Texture2D" uid="uid://dpmkmwq6wmr8i" path="res://Assets/Images/InvertedPlaceholder.png" id="4_p5nag"]
[ext_resource type="Texture2D" uid="uid://cuh3s1wm2itnm" path="res://Assets/Images/FastPlaceholder.png" id="6_q7vb7"]
[ext_resource type="ButtonGroup" uid="uid://dqoxyk1apmlvs" path="res://UI/map_buttons.tres" id="7_q7vb7"]
[ext_resource type="Texture2D" uid="uid://dffgyeya27umy" path="res://Assets/Images/icon.svg" id="8_qqu8f"]
[ext_resource type="Texture2D" uid="uid://b5cdmx5dmfo32" path="res://Assets/Images/SlowPlaceholder.png" id="9_q5g2k"]

[node name="CustomizationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qqu8f")
script = ExtResource("2_qqu8f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1072.0
offset_top = -162.0
offset_right = -599.0
offset_bottom = 155.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.798, 0.874, 0.95, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -541.0
offset_top = -159.0
offset_right = -49.0
offset_bottom = 154.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.88, 0.7832, 0.7744, 1)

[node name="CarOptions" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 260.0
offset_right = 1126.0
offset_bottom = 378.0

[node name="Car1" type="Button" parent="CarOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("1_upek8")
toggle_mode = true
button_group = ExtResource("1_wutij")
text = "Aqua"
icon = ExtResource("4_p5nag")
expand_icon = true

[node name="Car2" type="Button" parent="CarOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("1_upek8")
toggle_mode = true
button_group = ExtResource("1_wutij")
text = "Red"
icon = ExtResource("2_1wcrq")
expand_icon = true

[node name="Car3" type="Button" parent="CarOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("1_upek8")
toggle_mode = true
button_group = ExtResource("1_wutij")
text = "Green"
icon = ExtResource("6_q7vb7")
expand_icon = true

[node name="MapOptions" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 139.0
offset_top = 263.0
offset_right = 593.0
offset_bottom = 381.0

[node name="Map1" type="Button" parent="MapOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("1_upek8")
toggle_mode = true
button_group = ExtResource("7_q7vb7")
icon = ExtResource("3_ctcc5")
expand_icon = true

[node name="Map2" type="Button" parent="MapOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("1_upek8")
toggle_mode = true
button_group = ExtResource("7_q7vb7")
icon = ExtResource("8_qqu8f")
expand_icon = true

[node name="Map3" type="Button" parent="MapOptions"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("1_upek8")
toggle_mode = true
button_group = ExtResource("7_q7vb7")
icon = ExtResource("9_q5g2k")
expand_icon = true

[node name="TitleText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 51.0
offset_right = 178.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Customization"

[node name="MapText" type="Label" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 209.0
offset_right = 351.0
offset_bottom = 270.0
theme_override_font_sizes/font_size = 35
text = "Select Map:"

[node name="CarText" type="Label" parent="."]
layout_mode = 0
offset_left = 669.0
offset_top = 207.0
offset_right = 882.0
offset_bottom = 268.0
theme_override_font_sizes/font_size = 35
text = "Select Car:"

[node name="ConfirmButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.5
offset_top = 508.0
offset_right = 99.5
offset_bottom = 588.0
grow_horizontal = 2
text = "Confirm"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 19.0
offset_right = 116.0
offset_bottom = 61.0
text = "Back"

[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
